# packages/api/src/handlers/ecologist-experience/ecologist-experience.js
@@ -2,8 +2,8 @@ import getEcologistExperience from './get-ecologist-experience.js'
 import postEcologistExperience from './post-ecologist-experience.js'
 import putEcologistExperience from './put-ecologist-experience.js'
 
-export {
-  getEcologistExperience,
-  postEcologistExperience,
-  putEcologistExperience
-}
+// export {
+//   getEcologistExperience,
+//   postEcologistExperience,
+//   putEcologistExperience
+// }
